compilateurMinCaml/tests/typechecking/valid/LetTuple.ml
let (a,b) = (101,2) in print_int a