compilateurMinCaml/tests/typechecking/invalid/LetTuple.ml
let (a,b) = (true,2) in print_int a